--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,3 +61,21 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+.navbar .container-fluid{
+  height: 100%;
+}
+.nav-round-btn{
+  aspect-ratio: 1/1;
+  border: transparent;
+  border-radius: 50%;
+  background-color: #fff;
+  /* height: 40px;
+  width: auto; */
+  padding: 0;
+}
+
+.nav-round-btn img{
+  height: 50px;
+  width: auto;
+}
