--- a/assets/css/friends.css
+++ b/assets/css/friends.css
@@ -1,3 +1,10 @@
+body{
+    background: rgb(15,19,53);
+    background: linear-gradient(0deg, rgba(15,19,53,1) 16%, rgba(26,37,137,1) 100%);
+    min-height: 100vh;
+    width: 100vw;
+}
+
 .friend-btn{
     background-color: transparent;
     border: none;
