--- a/assets/css/friends.css
+++ b/assets/css/friends.css
@@ -1,31 +1,49 @@
-body{
-    background: rgb(15,19,53);
-    background: linear-gradient(0deg, rgba(15,19,53,1) 16%, rgba(26,37,137,1) 100%);
+body {
+    background: rgb(15, 19, 53);
+    background: linear-gradient(0deg, rgba(15, 19, 53, 1) 16%, rgba(26, 37, 137, 1) 100%);
     min-height: 100vh;
     width: 100vw;
     color: white;
+    overflow: hidden;
 }
 
-.friend{
-    background-color: #00000050;
-    padding: 10px;
-    width: max-content;
-    align-items: center;
-    justify-content: space-evenly;
-    display: flex;
+@media (min-width: 1025px) {
+
+    #main-form {
+        width: fit-content;
+        min-width:35em;
+        height: 100%;
+    }
+
+    .friend {
+        background-color: #00000050;
+        padding: 10px;
+        width: max-content;
+        align-items: center;
+        justify-content: space-evenly;
+        display: flex;
+    }
+
+    .friend-btn {
+        background-color: transparent;
+        border: none;
+        margin: .375rem;
+        padding: .5rem;
+        text-shadow: 2px 2px 0 #00000000;
+        transition: text-shadow .2s;
+    }
+
+    .friend-btn:hover {
+        text-shadow: 2px 2px 6px #000;
+    }
+
+
 }
 
-.friend-btn{
-    background-color: transparent;
-    border: none;
-    margin: .375rem;
-    padding: .5rem;
-    text-shadow: 2px 2px 0 #00000000;
-    transition: text-shadow .2s;
+@media (max-width: 1024px) {
+
 }
-.friend-btn:hover{
-    text-shadow: 2px 2px 6px #000;
-}
-#main-form{
-    width: fit-content;
+
+@media (max-width: 565px) {
+
 }
