--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -76,11 +76,10 @@ main{
   height: 10%;
 }
 #textarea{
-  padding: 0;
   background-color: #00000075;
   height: 50px;
   border-radius: 8px;
-  padding: 0;
+  padding: 2px;
 }
 
 #chatarea{
@@ -134,12 +133,16 @@ main{
   color: white;
   height: 100%;
   border: none;
-  width: 90%;
+  width: calc(100% - 80px);
   padding-top: 5px;
   padding-left: 5px;
 }
 
 #textarea-input:focus{
+  outline: none;
+}
+#textarea-input::placeholder{
+  text-align: center;
   outline: none;
 }
 
@@ -150,7 +153,7 @@ main{
   align-items: center;
   float: right;
   height: 100%;
-  width: 10%;
+  width: 80px;
 }
 
 .textarea-btn-smile{
