--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,15 +3,10 @@ body {
   overflow: hidden;
 }
 
+
 #pc-page {
   width: 100vw;
   height: 100vh;
-  background: rgb(15, 19, 53);
-  background: linear-gradient(
-    0deg,
-    rgba(26, 37, 137, 1) 16%,
-    rgba(15, 19, 53, 1) 100%
-  );
 } 
 
 .navbar{
@@ -21,6 +16,7 @@ body {
 .navbar-brand{
   /* <p>Chats<p> */
   font-size: 50px !important;
+  margin: 0;
 }
 
 #intercultor-avatar{
