--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.default-theme{
+  background: rgb(15,19,53);
+  background: linear-gradient(0deg, rgba(15,19,53,1) 16%, rgba(26,37,137,1) 100%);
+}
+.aqua-theme{
+  background: rgb(52,105,207);
+  background: linear-gradient(0deg, rgba(52,105,207,1) 16%, rgba(0,255,224,1) 100%);
+}
+.grape-theme{
+  background: rgb(53,21,93);
+  background: linear-gradient(0deg, rgba(53,21,93,1) 0%, rgba(37,15,65,1) 100%);
+}
+.dark-theme{
+  background: rgb(34,34,34);
+  background: linear-gradient(0deg, rgba(34,34,34,1) 0%, rgba(17,17,17,1) 100%);
+}
+
+
 @media (max-width: 565px) {
   #pc-page,
   #tablet-page {
