--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+button , a {
+  cursor: pointer;
+}
+
 .default-theme{
   background: rgb(15,19,53);
   background: linear-gradient(0deg, rgba(15,19,53,1) 16%, rgba(26,37,137,1) 100%);
