--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,13 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: rgb(15,19,53);
+  background: linear-gradient(0deg, rgba(26,37,137,1) 16%, rgba(15,19,53,1) 100%) !important;
+}
+
+.navbar{
+  padding: 0 !important;
+  height: 80px !important;
 }
 
 button , a {
@@ -10,19 +17,19 @@ button , a {
 
 .default-theme{
   background: rgb(15,19,53);
-  background: linear-gradient(0deg, rgba(26,37,137,1) 16%, rgba(15,19,53,1) 100%);
+  background: linear-gradient(0deg, rgba(26,37,137,1) 16%, rgba(15,19,53,1) 100%) !important;
 }
 .aqua-theme{
   background: rgb(52,105,207);
-  background: linear-gradient(0deg, rgba(52,105,207,1) 16%, rgba(0,255,224,1) 100%);
+  background: linear-gradient(0deg, rgba(52,105,207,1) 16%, rgba(0,255,224,1) 100%) !important;
 }
 .grape-theme{
   background: rgb(53,21,93);
-  background: linear-gradient(0deg, rgba(53,21,93,1) 0%, rgba(37,15,65,1) 100%);
+  background: linear-gradient(0deg, rgba(53,21,93,1) 0%, rgba(37,15,65,1) 100%) !important;
 }
 .dark-theme{
   background: rgb(34,34,34);
-  background: linear-gradient(0deg, rgba(34,34,34,1) 0%, rgba(17,17,17,1) 100%);
+  background: linear-gradient(0deg, rgba(34,34,34,1) 0%, rgba(17,17,17,1) 100%) !important;
 }
 
 
