--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -1,38 +1,51 @@
-body{
-    background: rgb(53,21,93);
-    background: linear-gradient(0deg, rgba(53,21,93,1) 0%, rgba(37,15,65,1) 100%);
-    min-height: 100vh;
-    overflow: hidden;
-    color: white;
+body {
+  background: rgb(53, 21, 93);
+  background: linear-gradient(
+    0deg,
+    rgba(53, 21, 93, 1) 0%,
+    rgba(37, 15, 65, 1) 100%
+  );
+  min-height: 100vh;
+  overflow: hidden;
+  color: white;
 }
-#pc-page{
-    height: calc(100vh - 80px);
+#pc-page {
+  height: calc(100vh - 80px);
 }
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-img{
-    background-color: #fff;
-    border-radius: 50%;
-}
-
-.left-bar , .right-bar {
-    background-color: #00000050;
+main {
+  padding: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.left-bar img{
-    aspect-ratio: 1/1;
-    width: 85%;
-    height: auto;
+img {
+  background-color: #fff;
+  border-radius: 50%;
 }
 
-.btn{
-    margin-block: .375rem;
+.left-bar,
+.right-bar {
+  background-color: #00000050;
 }
 
-.account-logo{
-    box-shadow: 0px 0px 10px black;
+.left-bar img {
+  aspect-ratio: 1/1;
+  width: 85%;
+  height: auto;
+}
+
+main img {
+  aspect-ratio: 1/1;
+  width: 30% !important;
+  height: auto;
+}
+
+.btn {
+  margin-block: 0.375rem;
+}
+
+.my-avatar {
+
+    object-fit: cover;
 }
