--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,6 +8,10 @@ body {
   width: 100vw;
   height: 100vh;
 } 
+/* 
+.intercultor-header-data{
+  display: none;
+} */
 
 .navbar-brand{
   /* <p>Chats<p> */
@@ -65,11 +69,12 @@ main{
 
 #around-textarea{
   width: 100%;
-  height: 10%;
+  /* height: 10% , 2rem; */
+  height: clamp(10%,2rem);
 }
 #textarea{
   background-color: #00000075;
-  height: 50px;
+  /* height: 50px; */
   border-radius: 8px;
   padding: 2px;
 }
@@ -128,6 +133,7 @@ main{
   width: calc(100% - 80px);
   padding-top: 5px;
   padding-left: 5px;
+  position: relative;
 }
 
 #textarea-input:focus{
