--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,113 +1,142 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap");
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: rgb(15,19,53);
-  background: linear-gradient(0deg, rgba(26,37,137,1) 16%, rgba(15,19,53,1) 100%) !important;
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgb(15, 19, 53);
+    background: linear-gradient(0deg, rgba(26, 37, 137, 1) 16%, rgba(15, 19, 53, 1) 100%) !important;
 }
 
-.navbar{
-  padding: 0 !important;
-  height: 80px !important;
+.navbar {
+    padding: 0 !important;
+    height: 80px !important;
 }
 
-button , a {
-  cursor: pointer;
+button, a {
+    cursor: pointer;
 }
 
-.default-theme{
-  background: rgb(15,19,53);
-  background: linear-gradient(0deg, rgba(26,37,137,1) 16%, rgba(15,19,53,1) 100%) !important;
+.default-theme {
+    background: rgb(15, 19, 53);
+    background: linear-gradient(0deg, rgba(26, 37, 137, 1) 16%, rgba(15, 19, 53, 1) 100%) !important;
 }
-.aqua-theme{
-  background: rgb(52,105,207);
-  background: linear-gradient(0deg, rgba(52,105,207,1) 16%, rgba(0,255,224,1) 100%) !important;
+
+.aqua-theme {
+    background: rgb(52, 105, 207);
+    background: linear-gradient(0deg, rgba(52, 105, 207, 1) 16%, rgba(0, 255, 224, 1) 100%) !important;
 }
-.grape-theme{
-  background: rgb(53,21,93);
-  background: linear-gradient(0deg, rgba(53,21,93,1) 0%, rgba(37,15,65,1) 100%) !important;
+
+.grape-theme {
+    background: rgb(53, 21, 93);
+    background: linear-gradient(0deg, rgba(53, 21, 93, 1) 0%, rgba(37, 15, 65, 1) 100%) !important;
 }
-.dark-theme{
-  background: rgb(34,34,34);
-  background: linear-gradient(0deg, rgba(34,34,34,1) 0%, rgba(17,17,17,1) 100%) !important;
+
+.dark-theme {
+    background: rgb(34, 34, 34);
+    background: linear-gradient(0deg, rgba(34, 34, 34, 1) 0%, rgba(17, 17, 17, 1) 100%) !important;
 }
 
 
-@media (max-width: 565px) {
-  #pc-page,
-  #tablet-page {
-    display: none;
-  }
-  #mobile-page {
-    display: block;
-  }
-}
 @media (max-width: 1024px) {
-  #pc-page,
-  #mobile-page {
-    display: none;
-  }
-  #tablet-page {
-    display: block;
-  }
+    #pc-page {
+        display: none;
+    }
+
+    #mobile-page {
+        display: block;
+    }
+
+    .nav-round-btn {
+        aspect-ratio: 1/1;
+        border: transparent;
+        border-radius: 50%;
+        background-color: transparent;
+        height: 100%;
+        width: auto;
+        padding: 0;
+    }
+    .nav-round-btn img {
+        height: 100%;
+        width: auto;
+        object-fit: cover;
+        border: transparent;
+        border-radius: 50%;
+    }
+    .mobile-navbar{
+        float: right;
+    }
 }
+
 @media (min-width: 1025px) {
-  #mobile-page,
-  #tablet-page {
-    display: none;
-  }
-  #pc-page {
-    display: block;
-  }
+    #mobile-page {
+        display: none;
+    }
+
+    #pc-page {
+        display: block;
+    }
+
+    .nav-round-btn {
+        aspect-ratio: 1/1;
+        border: transparent;
+        border-radius: 50%;
+        background-color: #fff;
+        height: 50px;
+        width: auto;
+        padding: 0;
+    }
+
+    .nav-round-btn img {
+        height: 50px;
+        width: 100%;
+        object-fit: cover;
+        border: transparent;
+        border-radius: 50%;
+    }
+
 }
 
 .f-left {
-  float: left;
+    float: left;
 }
+
 .f-right {
-  float: right;
+    float: right;
 }
+
 .bg-transparent {
-  background-color: rgba(255, 255, 255, 0) !important;
+    background-color: rgba(255, 255, 255, 0) !important;
 }
 
 .bg-2quater-transparent {
-  background-color: rgba(0, 0, 0, 0.51) !important;
+    background-color: rgba(0, 0, 0, 0.51) !important;
 }
 
 .bg-3quater-transparent {
-  background-color: rgba(0, 0, 0, 0.7) !important;
+    background-color: rgba(0, 0, 0, 0.7) !important;
 }
 
 .clr-white {
-  color: white;
+    color: white;
 }
+
 .align-items-center {
-  align-items: center;
+    align-items: center;
 }
+
 .smile-font {
-  font-family: "Noto Color Emoji", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Noto Color Emoji", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-.navbar .container-fluid{
-  height: 100%;
-}
-.nav-round-btn{
-  aspect-ratio: 1/1;
-  border: transparent;
-  border-radius: 50%;
-  background-color: #fff;
-  height: 50px;
-  width: auto;
-  padding: 0;
+.navbar .container-fluid {
+    height: 100%;
 }
 
-.nav-round-btn img{
-  height: 50px;
-  width: 100%;
-  object-fit: cover;
-  border: transparent;
-  border-radius: 50%;
+/* .my-avatar{
+  transition: border-radius 300ms ease-in-out;
 }
+
+.my-avatar:hover{
+  border-radius: 25%;
+} */
